# Star-Wars-Lego-Recognition

./: 01_main.py  02_data.py  03_functions.py  minifigs.csv  pyproject.toml  rebrickable_sets_z4dis.csv
